fixed the gutter for H1

--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -25,6 +25,11 @@ body {
     color: $secondaryColor;
 }
 
+h1 {
+    margin: 0;
+    padding-left: 1rem;
+}
+
 header {
     display: flex;
     align-items: center;
